# liims

./: .env.example  .env.production.example  .gitignore  AUDIT_FRONTEND_FINAL.md  AUDIT_PHASE1.md  AUDIT_PHASE2.md  AUDIT_PHASE3.md  AUDIT_PHASE4.md  AUDIT_PHASE5.md  AUDIT_PHASE6.md  AUDIT_PHASE7.md  AUDIT_PHASE8.md  CLAUDE.md  HANDOVER.md  P10_API_TEST_REPORT.md  P10_BROWSER_TEST_AUTH.md  P10_BROWSER_TEST_DASHBOARDS.md  P10_BROWSER_TEST_FIELDOPS.md  P10_BROWSER_TEST_SAMPLES.md  P10_FRONTEND_TEST_REPORT.md  P11_AUTH_TEST_REPORT.md  P11_INTEGRATION_TEST_REPORT.md  P11_WORKFLOW_TEST_REPORT.md  P9_AUDIT_VERIFICATION.md  P9_BACKEND_AUDIT.md  P9_FRONTEND_AUDIT.md  P9_SECURITY_AUDIT.md  P9_SPEC_AUDIT.md  README.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml  label_generator.py  nginx.conf  package-lock.json  playwright.config.ts
backend/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 001_initial_schema.py  002_add_file_store_and_fixes.py  003_add_enrollment_date_source.py  004_backfill_enrollment_dates.py  005_rename_user_roles.py  006_add_odk_trigger_type.py  007_fix_userrole_type.py  008_fix_all_enum_types.py
backend/app/: celery_app.py  config.py  database.py  main.py  seed.py
backend/app/core/: deps.py  email.py  error_handlers.py  middleware.py  rate_limit.py  sanitize.py  security.py
backend/app/models/: __init__.py  base.py  enums.py  field_ops.py  file_store.py  instrument.py  notification.py  omics.py  participant.py  partner.py  sample.py  storage.py  system.py  user.py
backend/app/schemas/: __init__.py  (+16 more)
(+201 files in other folders)
